--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
