--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js && node src/seed.js",
-    "dev": "nodemon --exec \"node index.js && node src/seed.js\""
+    "seed": "node src/seed.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js""
   },
   "keywords": [
     "technobyte",
